generate adopt_bundle